--- a/src/index.css
+++ b/src/index.css
@@ -53,12 +53,15 @@ table {
 /* Font */
 body {
   font-family: "Do Hyeon", sans-serif;
+  background-color: #f7ede2;
 }
 
 .container {
   margin: 10vh auto;
   width: 400px;
   border: 2px solid black;
+  -webkit-box-shadow: 2px 1px 1px 2px rgba(0, 0, 0, 0.5);
+          box-shadow: 2px 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .container header {
@@ -98,19 +101,19 @@ body {
 }
 
 .container input:focus::-webkit-input-placeholder {
-  opacity: 0;
+  visibility: hidden;
 }
 
 .container input:focus:-ms-input-placeholder {
-  opacity: 0;
+  visibility: hidden;
 }
 
 .container input:focus::-ms-input-placeholder {
-  opacity: 0;
+  visibility: hidden;
 }
 
 .container input:focus::placeholder {
-  opacity: 0;
+  visibility: hidden;
 }
 
 .container li {
@@ -120,6 +123,10 @@ body {
       -ms-user-select: none;
           user-select: none;
   font-size: 1.25rem;
+}
+
+.container li:nth-child(2n+1) {
+  background-color: #ffffff;
 }
 
 .container li:nth-child(2n) {
@@ -139,4 +146,4 @@ body {
 .checked {
   text-decoration: line-through;
 }
-/*# sourceMappingURL=TodoList.css.map */
+/*# sourceMappingURL=index.css.map */
