--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -13,4 +13,6 @@ $font-size-large: 2.5rem;
 
 // Color
 $gray-color: #f7f7f7;
+$white-color: #ffffff;
 $yellow-color: #fdbb2d;
+$border-style: 2px solid black;
