--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -12,7 +12,8 @@ $font-size-medium: 1.25rem;
 $font-size-large: 2.5rem;
 
 // Color
+$background-color: #f7ede2;
+$header-color: #fdbb2d;
 $gray-color: #f7f7f7;
 $white-color: #ffffff;
-$yellow-color: #fdbb2d;
-$border-style: 2px solid black;
+$border-style: 3px solid black;
