--- a/src/index.css
+++ b/src/index.css
@@ -54,17 +54,22 @@ table {
 body {
   font-family: "Do Hyeon", sans-serif;
   background-color: #f7ede2;
+  -webkit-transition: .3s linear;
+  transition: .3s linear;
+}
+
+body.dark {
+  background-color: #242424;
 }
 
 .container {
   margin: 10vh auto;
   width: 400px;
-  border: 2px solid black;
-  -webkit-box-shadow: 2px 1px 1px 2px rgba(0, 0, 0, 0.5);
-          box-shadow: 2px 1px 1px 2px rgba(0, 0, 0, 0.5);
+  border: 3px solid black;
 }
 
 .container header {
+  position: relative;
   background-color: #fdbb2d;
   text-align: center;
   padding: 1rem;
@@ -72,10 +77,24 @@ body {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  -webkit-transition: .3s linear;
+  transition: .3s linear;
+}
+
+.container header.dark {
+  background-color: #f59f00;
 }
 
 .container header h1 {
   font-size: 2.5rem;
+}
+
+.container header .toggleBtn {
+  position: absolute;
+  right: 20px;
+  top: 25px;
+  font-size: 1.25rem;
+  cursor: pointer;
 }
 
 .container input {
@@ -96,8 +115,8 @@ body {
 
 .container input:focus {
   outline: none;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
 }
 
 .container input:focus::-webkit-input-placeholder {
